src/objects/csord__Subscription__c.object
<CustomObject>
    <description>An accessibility model to a Service (or Services). Governs the rights to access and use a Service.</description>
   <fields>
        <fullName>Address_Number__c</fullName>
        <formula>LG_Address__r.LG_AddressID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>LG_Address__r.cscrm__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>LG_Address__r.cscrm__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNumberExtension__c</fullName>
        <formula>LG_Address__r.LG_HouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseNumberExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <formula>LG_Address__r.LG_HouseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House Number</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Premise_Name__c</fullName>
        <formula>LG_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <formula>LG_Address__r.LG_PremiseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>LG_Address__r.cscrm__State_Province__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>LG_Address__r.cscrm__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <formula>LG_Address__r.cscrm__Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; csconta__Billing_Account__r.Id ,csconta__Billing_Account__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Termination_Date__c</fullName>
        <label>Billing Termination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kenan_Response__c</fullName>
        <label>Kenan Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_AccountCountry__c</fullName>
        <formula>TEXT(csord__Account__r.LG_VisitCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressDetails__c</fullName>
        <formula>IF( ISBLANK(LG_Address__r.cscrm__Street__c ) , &apos;&apos;, LG_Address__r.cscrm__Street__c + &apos;,&apos;) + 
IF( ISBLANK(LG_Address__r.LG_HouseNumber__c) , &apos;&apos;,  &apos; &apos; + LG_Address__r.LG_HouseNumber__c) + 
IF( ISBLANK(LG_Address__r.LG_HouseNumberExtension__c) , &apos;,&apos;, LG_Address__r.LG_HouseNumberExtension__c +&apos;,&apos;) + 
IF( ISBLANK(LG_Address__r.cscrm__State_Province__c) , &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__State_Province__c +&apos;,&apos;) + 
IF( ISBLANK(LG_Address__r.cscrm__City__c) , &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__City__c +&apos;,&apos;) + 
IF( ISBLANK(LG_Address__r.cscrm__Zip_Postal_Code__c) , &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__Zip_Postal_Code__c +&apos;,&apos;) + 
IF( ISBLANK(LG_Address__r.cscrm__Country__c) , &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ChangeTypeCode__c</fullName>
        <formula>CASE( csordtelcoa__Change_Type__c , &quot;Add&quot;, &quot;401&quot;, &quot;Terminate&quot;, &quot;402&quot;, &quot;Change&quot;,&quot;403&quot;,&quot;Migrate&quot;,&quot;403&quot;, &quot;Contract Renewal&quot;, &quot;403&quot;, &quot;Retention&quot;, &quot;403&quot;,&quot;Move&quot;,&quot;404&quot;,&quot;401&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>csconta__Contract__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ReplacementSubChangeType__c</fullName>
        <formula>TEXT(csordtelcoa__Replacement_Subscription__r.csordtelcoa__Change_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG_ReplacementSubChangeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>cscrm__Site__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning and tracking</description>
        <inlineHelpText>Indicates that the record is not relevant do to the change is active version (newer or older version exists and it is active)</inlineHelpText>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SubRootOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an order lookup field and will be populated with the primary order value.</description>
        <label>Root Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionExternalId__c</fullName>
        <label>Subscription External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Contract_Amount__c</fullName>
        <formula>csord__Total_Recurring_Charges__c  *  LG_Contract__r.Remaining_Contract_Days__c * (12/365)</formula>
        <label>Remaining Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_Id__c</fullName>
        <formula>if(csord__Order__c == null &amp;&amp; CONTAINS(Name,&apos;Virtual Voice&apos;), UM_HPBXSalesPartnerId__c, 
if(UM_State__c == &apos;NRW&apos; || UM_State__c == &apos;HSN&apos;, csord__Order__r.csordtelcoa__Opportunity__r.UM_PartnerAccount__r.UM_P_Sales_ID_NRW_HSN__c, 
csord__Order__r.csordtelcoa__Opportunity__r.UM_PartnerAccount__r.UM_P_Sales_ID_BW__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipTriggerToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to check if code needs to be skipped in the trigger. Only acts on a change not on the value itself.
Also no need to actually store this value.</description>
        <label>SkipTriggerToggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_CloneWhenMigrating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone When Migrating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_HPBXSalesPartnerId__c</fullName>
        <description>This field is only used for HPBX. Currently this is been used only for Voiceworks HPBX. This will be populated only if the services are being created from VW data.</description>
        <inlineHelpText>This field is only used for HPBX.</inlineHelpText>
        <label>HPBX Sales Partner Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_State1__c</fullName>
        <label>UM State1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_State__c</fullName>
        <formula>IF( ISBLANK(csord__Order__r.csord__Related_Service__c) , &apos;&apos;,csord__Order__r.csord__Related_Service__r.UM_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SubscriberId__c</fullName>
        <externalId>true</externalId>
        <label>Subscriber ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksAccountID__c</fullName>
        <description>for storing voiceworks account id</description>
        <label>Voiceworks Account ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksExternalID__c</fullName>
        <formula>IF (CONTAINS(Name, &apos;Virtual Voice&apos;),
csconta__Billing_Account__r.LG_BillingAccountNumber__c &amp; &apos;|&apos; &amp; LG_Address__r.LG_PremiseNumber__c &amp; &apos;|&apos; &amp;
 CASE( LG_Address__r.cscrm__State_Province__c , &apos;BW&apos;, &apos;BW&apos;, &apos;HSN&apos;, &apos;HSN&apos;,&apos;NRW&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voiceworks External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Billing Account to use for this Subscription.</description>
        <inlineHelpText>The Billing Account to use for this Subscription.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account that governs this Subscription.</description>
        <inlineHelpText>The Account that governs this Subscription.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Order of this Subscription.</description>
        <inlineHelpText>The parent Order of this Subscription.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Subscription.</description>
        <inlineHelpText>The parent Solution of this Subscription.</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>The status of the Subscription in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <formula>csord__Total_Service_One_Off_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total One-Off Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Total_Recurring_Charges__c</fullName>
        <formula>csord__Total_Service_Recurring_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Total_Service_One_Off_Charges__c</fullName>
        <description>Sum of all the one off charges on all of the subscription’s services</description>
        <inlineHelpText>Sum of all the one off charges on all of the subscription’s services</inlineHelpText>
        <label>Total Service One-Off Charges</label>
        <summarizedField>csord__Service__c.csord__Total_One_Off_Charges__c</summarizedField>
        <summaryForeignKey>csord__Service__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Service_Recurring_Charges__c</fullName>
        <description>Sum of all the recurring charges on all of the subscription’s services</description>
        <inlineHelpText>Sum of all the recurring charges on all of the subscription’s services</inlineHelpText>
        <label>Total Service Recurring Charges</label>
        <summarizedField>csord__Service__c.csord__Total_Recurring_Charges__c</summarizedField>
        <summaryForeignKey>csord__Service__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Cease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Closed_Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Replacement Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Replaced Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number_Sequence__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription Number Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>csord__All</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_Address__c</columns>
        <columns>csordtelcoa__Subscription_Number__c</columns>
        <columns>csord__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>